--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "bc": "biome check --write ./src"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
+    "@mui/material-nextjs": "^5.16.6",
     "@testing-library/dom": "^10.4.0",
     "next": "14.2.5",
     "react": "^18",
